--- a/index.html
+++ b/index.html
@@ -1,13 +1,70 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>js-project</title>
+  <head>
 
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-</head>
+    <title>The Rolls</title>
+  </head>
 <body>
-    <img src="images/dmp-0063_websize.jpg" alt="test image" loading="lazy">
-</body>
+    <!-- Navbar -->
+     <!-- The Rolls -->
+        <!-- Home -->
+        <!-- Gallery -->
+        <!-- About Pricing in Here-->
+        <!-- Bookings -->
+    <!-- /Navbar -->
+<div class="navcallout-container">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#Home">The Rolls</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon "></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="#">Gallery</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link " href="#">Bookings</a>
+            </li>
+        </ul>
+        </div>
+    </div>
+    </nav>
+
+    <div class="container-fluid row">
+        <div class="col-12 text-center">
+            <h1>Arrive In Style</h1>
+            <p>Find out if we're available for your special day</p>
+        </div>
+    </div>
+</div>
+    <!-- Callout -->
+        <!-- background photo under callout and navbar-make it opaque. image204 for background. 
+        callout text in semi opaque div
+
+        <h1>Arrive in Style</h1>
+        <p>Find out if we're available for your special day</p>
+        <button>Enquiry Button to bring up Modal</button> -->
+
+    <!-- /Callout -->
+
+    <!-- Quotes -->
+    <!-- /Quotes -->
+
+    <!-- Footer -->
+    <!-- /Footer -->
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </html>
